<resources>
    <string name="app_name">ToDo</string>

    <string name="textViewHeader">Codepath ToDo App : @sudhishkr</string>
    <string name="textViewAddTaskTitle">Add ToDo Task</string>
    <string name="buttonAddTask">Add</string>

    <string name="buttonEditSave">save</string>
    <string name="textViewEditTitle">Edit ToDo Task</string>

    <string name="textViewTaskName">NAME</string>
    <string name="textViewTaskNotes">NOTES</string>
    <string name="textViewTaskPriority">PRIORITY</string>
    <string name="textViewTaskDueDate">DUE DATE</string>
    <string name="textViewTaskStatus">STATUS</string>

    <string name="appBarAddTask">ADD TASK</string>
    <string name="appBarViewTask">VIEW TASK</string>
    <string name="appBarEditTask">EDIT TASK</string>
    <string name="appBarSaveTask">SAVE TASK</string>
    <string name="appBarCloseTask">CLOSE TASK</string>
    <string name="appBarDeleteTask">DELETE TASK</string>

    <string name="status_prompt">status</string>
    <string-array name="status_arrays">
        <item>Completed</item>
        <item>In-Progress</item>
        <item>Pending</item>
    </string-array>

    <string name="priority_prompt">status</string>
    <string-array name="priority_arrays">
        <item>HIGH</item>
        <item>MEDIUM</item>
        <item>LOW</item>
    </string-array>

</resources>
